<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="calendar">Calendar</string>
    <string name="location">Location</string>
    <string name="inbox">Inbox</string>
    <string name="camera">Camera</string>
    <string name="dashboard">Dashboard</string>
    <string name="creditcard">CreditCard</string>
    <string name="tools">Tools</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
</resources>
